--- a/workout/basic/index.html
+++ b/workout/basic/index.html
@@ -1,1 +1,43 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="https://all-myindianhub-codes.myindianhub.com/hub-in/vdx7612evd/d13trd/hgu57g/codes/main/nav-code.css">
+    <link rel="stylesheet" type="text/css" href="https://all-myindianhub-codes.myindianhub.com/hub-in/vdx7612evd/d13trd/hgu57g/codes/main/header-code.css">
+    <link rel="stylesheet" type="text/css" href="https://all-myindianhub-codes.myindianhub.com/hub-in/vdx7612evd/d13trd/hgu57g/codes/main/box-code.css">
+    <link rel="stylesheet" type="text/css" href="https://all-myindianhub-codes.myindianhub.com/hub-in/vdx7612evd/d13trd/hgu57g/codes/main/footer-code.css">
+    <link rel="stylesheet" type="text/css" href="https://all-myindianhub-codes.myindianhub.com/hub-in/vdx7612evd/d13trd/hgu57g/codes/main/fixed.css">
+</head>
+<body>
+  <nav>
+    <div class="menu-icon" onclick="toggleMenu()">☰</div>
+    <div class="hide-on-mobile"><li><a href="https://myindianhub.in/">Home</a></li></div>
 
+      <div class="hide-on-mobile"><li><a href="https://myindianhub.in/Entertainment/">Women</a></li></div>
+
+      <div class="hide-on-mobile"><li><a href="https://myindianhub.in/Tech/">Men</a></li></div>
+  </nav>
+  <section class="challenges" id="challenges">
+    <div class="main-box">
+      <div class="box">
+        <img src="https://img.myindianhub.in/Blog/women.jpg" alt="women">
+        <div class="text">
+          <h1>Women</h1>
+          <p>Empower women with a tailored fitness app, promoting strength, flexibility, and confidence. Elevate well-being through personalized workouts for a healthier, happier lifestyle.</p>
+        </div><br>
+        <a href="https://myindianhub.in/Blog/Dev/Mastering-Flutter/"><button class="box-button">Click</button></a>
+      </div>
+      <div class="box">
+        <img src="https://img.myindianhub.in/Blog/men.jpg" alt="men">
+        <div class="text">
+          <h1>Men</h1>
+          <p>Foster men's fitness success with a dynamic app. Cultivate strength, endurance, and vitality through personalized workouts for peak performance and well-rounded health.</p>
+        </div><br>
+        <a href="https://myindianhub.in/Blog/The-Ultimate-Guide-to-Dropshipping/"><button class="box-button">Click</button></a>
+      </div>
+    </div>
+  </section>
+  <script type="text/javascript" src="https://all-myindianhub-codes.myindianhub.com/hub-in/vdx7612evd/d13trd/hgu57g/codes/main/nav-code.js"></script>
+</body>
+</html>
