--- a/workout/basic/index.html
+++ b/workout/basic/index.html
@@ -26,7 +26,7 @@
           <h1>Women</h1>
           <p>Empower women with a tailored fitness app, promoting strength, flexibility, and confidence. Elevate well-being through personalized workouts for a healthier, happier lifestyle.</p>
         </div><br>
-        <a href="https://myindianhub.in/Blog/Dev/Mastering-Flutter/"><button class="box-button">Click</button></a>
+        <a href="https://store-gf.github.io/gsvdj/workout/basic/women/"><button class="box-button">Click</button></a>
       </div>
       <div class="box">
         <img src="https://img.myindianhub.in/Blog/men.jpg" alt="men">
@@ -34,7 +34,7 @@
           <h1>Men</h1>
           <p>Foster men's fitness success with a dynamic app. Cultivate strength, endurance, and vitality through personalized workouts for peak performance and well-rounded health.</p>
         </div><br>
-        <a href="https://myindianhub.in/Blog/The-Ultimate-Guide-to-Dropshipping/"><button class="box-button">Click</button></a>
+        <a href="https://store-gf.github.io/gsvdj/workout/basic/men/"><button class="box-button">Click</button></a>
       </div>
     </div>
   </section>
