--- a/workout/basic/index.html
+++ b/workout/basic/index.html
@@ -14,9 +14,9 @@
     <div class="menu-icon" onclick="toggleMenu()">☰</div>
     <div class="hide-on-mobile"><li><a href="https://myindianhub.in/">Home</a></li></div>
 
-      <div class="hide-on-mobile"><li><a href="https://myindianhub.in/Entertainment/">Women</a></li></div>
+      <div class="hide-on-mobile"><li><a href="https://store-gf.github.io/gsvdj/workout/basic/women/">Women</a></li></div>
 
-      <div class="hide-on-mobile"><li><a href="https://myindianhub.in/Tech/">Men</a></li></div>
+      <div class="hide-on-mobile"><li><a href="https://store-gf.github.io/gsvdj/workout/basic/men/">Men</a></li></div>
   </nav>
   <section class="challenges" id="challenges">
     <div class="main-box">
